--- a/openmaptiles.yaml
+++ b/openmaptiles.yaml
@@ -19,8 +19,8 @@ tileset:
   name: OpenMapTiles
   version: 3.15.0
   id: openmaptiles
-  description: "A tileset showcasing all layers in OpenMapTiles. https://openmaptiles.org"
-  attribution: '<a href="https://www.openmaptiles.org/" target="_blank">&copy; OpenMapTiles</a> <a href="https://www.openstreetmap.org/copyright" target="_blank">&copy; OpenStreetMap contributors</a>'
+  description: "Tileset for https://openmap.vn"
+  attribution: '<a href="https://www.openmap.vn" target="_blank">&copy; Openmap.vn</a>'
   center: [0, 0, 1]
   bounds: [-180.0,-85.0511,180.0,85.0511]
   maxzoom: 14
